# seallqg

./: .gitignore  LICENSE  Project.toml  README.md  aditya.yml  align_fpm.py  align_fpm_chopper.py  ancillary_code.py  apply_best_flat.py  apply_dm_zero.py  chop.py  close_SHWFS_loop.py  code.py  functions.py  genDH.py  genDH_chopper.py  genIM.py  git_token.txt  imDispTest.py  image_utils.py  scc_tt_loop.py  setup.cfg  setup.py  test.py  transfer2seal.py  tt_align.py  tt_exp.py  tt_opt.py  zern_opt.py
dev/: aberrations.py  controller.py  observer.py  utils.py
fastdemo/: calibrate_scc_lowfs.py  demo_scc.py  par_functions.py
figures/: linearity.py  seal_delays.py  seal_schedule.py
notebooks/: control_exposition.jl  controls_prototyping_jl.ipynb  controls_testing.ipynb  identification_statespace.ipynb  keck_tt_ar.ipynb  lqg.ipynb  lqg_delays_Dmatrix.ipynb  lqr_toy.ipynb  lqr_toy2.ipynb  model_testing.ipynb  notch_filter.ipynb  pem_openloops backup 1.jl  pem_openloops.jl  propagation_testing.ipynb  psd.ipynb  rtf.ipynb  seal_cl_analysis.ipynb  seal_delays.ipynb  seal_ol_analysis.ipynb  secondordersystem.jl  steadystate_fast.ipynb  sync_dm_and_measurements.ipynb  ttcontrol_observer_prototyping_py.ipynb  turb_fit.ipynb  turbulence_powerlaw.ipynb  vib_peak_id.ipynb  why_doesnt_seal_lqg_work.ipynb
scripts/: align_fpm_sweep.py  ancillary_code.py  can_a_function_see_its_log.py  client.py  close_SHWFS_loop.py  demoscc.py  functions.py  genDH.py  genIM.py  image_timing.py  intro.jl  kfvib.py  lindebug.py  linearity.py  lqg_air.py  lqg_atmvib.py  make_aberrations.jl  multi.py  (+16 more)
(+289 files in other folders)
