[metadata]
name = set-tt-control
version = 0.0.1
author = Aditya Sengupta
author_email = author@example.com
description = SEAL Experiments to Tune Tip-Tilt Control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aditya-sengupta/set-tt-control
project_urls =
    Bug Tracker = https://github.com/aditya-sengupta/set-tt-control/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src